# emission-ledger-api

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: purchase_body_example.json
src/: config.py  main.py
src/authorizations/: constants.py  router.py  schemas.py  service.py
